# env-finder

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
env_finder/: __main__.py  analysis.py  errors.py  github.py  logger.py  main.py  scraper.py  util.py
env_finder/api/: api.py
env_finder/api/models/: _shared_fields.py  hits.py  secret.py  stats.py
scripts/: build.ps1  build.sh  local_install.ps1
src/: analysis.py  github.py  scraper.py  util.py
src/api/: api.py
src/api/models/: hits.py  secret.py
